[gd_scene load_steps=2 format=3 uid="uid://77v2uflnapir"]

[ext_resource type="Script" path="res://Scripts/menu_inicio.gd" id="1_qb7yg"]

[node name="MenuInicio" type="CanvasLayer"]
script = ExtResource("1_qb7yg")

[node name="Contenedor" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -0.5
offset_top = -11.5
offset_right = 0.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2

[node name="Texto" type="Label" parent="Contenedor"]
layout_mode = 2
size_flags_vertical = 1
text = "Menu"
horizontal_alignment = 1

[node name="FilaNormal" type="HBoxContainer" parent="Contenedor"]
layout_mode = 2

[node name="Salir" type="Button" parent="Contenedor/FilaNormal"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Salir"

[node name="Ajustes" type="Button" parent="Contenedor/FilaNormal"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Ajustes"

[node name="FilaSalir" type="HBoxContainer" parent="Contenedor"]
visible = false
layout_mode = 2

[node name="Si" type="Button" parent="Contenedor/FilaSalir"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Si"

[node name="No" type="Button" parent="Contenedor/FilaSalir"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "No"

[connection signal="pressed" from="Contenedor/FilaNormal/Salir" to="." method="_on_salir_pressed"]
[connection signal="pressed" from="Contenedor/FilaNormal/Ajustes" to="." method="_on_ajustes_pressed"]
[connection signal="pressed" from="Contenedor/FilaSalir/Si" to="." method="_on_si_pressed"]
[connection signal="pressed" from="Contenedor/FilaSalir/No" to="." method="_on_no_pressed"]
